[package]
name = "grpc3"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tokio = { version = "1.44.0", features = ["full"] }
tonic = "0.12.3"
prost = "0.13.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
uuid = { version = "1.15.1", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12.3"
